bynkc/tests/fixtures/negative/22_constructor_wrong_base/input.karn
commons test {
  type Reps = Int where InRange(1, 100)

  fn f(s: String) -> Result[Reps, ValidationError] {
    Reps.of(s)
  }
}
